revising rps, started with ui

--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <h1> Play Rock, Paper, Scissors!!</h1>
+        <h3> Choose wisely!</h3>
+    </header>
+    <div id="options">
+        <div><button name="rock" id="rock">--Rock</button></div>
+        <div><button name="paper" id="paper">--Paper</button></div>
+        <div><button name="scissors" id="scissors">--Scissors</button></div>
+    </div>
+    <div id="round-winner">Round Winner
+    </div>
+    <div id="current-score">Current Score</div>
+    <div id="winner">And the winner is...</div>
+    <footer>Made by tahir mujic</footer>
     
 <script src="javascript.js"></script>
 </body>
