--- a/index.html
+++ b/index.html
@@ -20,14 +20,12 @@
             placeholder="Please enter the number of winning rounds!">
         <button type="submit" id="btn-start">start game!</button>
     </div>
-    
-        <div id="options" class="options-hidden">
-            <img src="img/rock-paper-scissors-neon-icons.png" alt="rock paper scissors">    
-            <button name="rock" id="rock"></button>
-            <button name="paper" id="paper"></button>
-            <button name="scissors" id="scissors"></button>
-        </div>
-   
+    <div id="options" class="options-hidden">
+        <!-- <img src="img/rock-paper-scissors-neon-icons.png" alt="rock paper scissors"> -->
+        <button name="rock" id="rock"></button>
+        <button name="scissors" id="scissors"></button>
+        <button name="paper" id="paper"></button>
+    </div>
     <div id="game-container" class="hide-game-container">
         <div id="round-counter">
             <p>Tap on a sign !<br>Round 1</p>
